fix: use object-contain for fit mode height
Otherwise, the image can be cut off on the sides in this mode

--- a/src/components/ui/project/irysmanga/styles/Reader.module.css
+++ b/src/components/ui/project/irysmanga/styles/Reader.module.css
@@ -1,9 +1,9 @@
 .page {
-    @apply m-auto object-cover w-full;
+    @apply m-auto w-full;
 }
 
 .pageHeight {
-    @apply h-full;
+    @apply h-full max-h-full w-full;
 }
 
 .pageWidth {
